--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Ashwin's PIC16B Blog
 
 # Short bio or description (displayed in the header)
-description: Python Prince
+description: Cash the Coder
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/PIC16B/PIC16B.github.io/master/images/ucla-math.png
+avatar: https://www.123rf.com/photo_57291413_cartoon-basketball-running-with-money.html
 
 #
 # Flags below are optional
