--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ashwin's PIC16B Blog
 description: Cash the Coder
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.istockphoto.com/vector/cartoon-money-character-spinning-a-basketball-gm1132673331-300373973
+avatar: https://pixabay.com/photos/tree-sunset-clouds-sky-silhouette-736885/
 
 #
 # Flags below are optional
