--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ashwin's PIC16B Blog
 description: Cash the Coder
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://pixabay.com/photos/tree-sunset-clouds-sky-silhouette-736885/
+avatar: https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg
 
 #
 # Flags below are optional
