--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ashwin's PIC16B Blog
 description: Cash the Coder
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg
+avatar: https://cdn.friendlystock.com/wp-content/uploads/2019/07/45-basketball-with-money-eyes-emoji-cartoon-clipart.jpg
 
 #
 # Flags below are optional
